Update project information with real project details and links

--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
             <div class="projects-grid">
                 <div class="project-card" data-category="web" data-aos="fade-up">
                     <div class="project-info">
-                        <h3>E-Commerce Platform</h3>
-                        <p>Modern online shopping experience with seamless checkout</p>
+                        <h3>Futuristic 3D Solar System</h3>
+                        <p>The Futuristic 3D Solar System is an interactive web application built with Three.js that simulates our solar system in 3D. The project features a realistic representation of all eight planets orbiting around a central sun, with special attention to visual details like Saturn's rings and a starfield background</p>
                         <div class="project-buttons">
-                            <a href="#" class="btn btn-primary btn-small">Live Demo</a>
-                            <a href="#" class="btn btn-outline btn-small">Source Code</a>
+                            <a href="https://solarsystembybilald.netlify.app/" class="btn btn-primary btn-small">Live Demo</a>
+                            <a href="https://github.com/md-bilal-d/solar-system-" class="btn btn-outline btn-small">Source Code</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card" data-category="ui" data-aos="fade-up" data-aos-delay="100">
                     <div class="project-info">
-                        <h3>Banking App Redesign</h3>
-                        <p>Simplified and secure mobile banking interface</p>
+                        <h3>Real time route visualizer </h3>
+                        <p>A real-time location sharing application that helps friends coordinate meetups and navigate together. Built with Node.js, Express, Socket.IO, and MongoDB Features Real-time location tracking using Socket.IO Group management with unique group IDs Backend: Node.js, Express Mapping Services: Geoapify API</p>
                         <div class="project-buttons">
-                            <a href="#" class="btn btn-primary btn-small">Live Demo</a>
-                            <a href="#" class="btn btn-outline btn-small">Source Code</a>
+                            <a href="https://realtime-route-visualizer.onrender.com/" class="btn btn-primary btn-small">Live Demo</a>
+                            <a href="https://github.com/md-bilal-d/real-time-route-visualizer" class="btn btn-outline btn-small">Source Code</a>
                         </div>
                     </div>
                 </div>
